added references to numpy (np) and pyplot (plt)

--- a/bootcamp/Class5.ipynb
+++ b/bootcamp/Class5.ipynb
@@ -21,8 +21,8 @@
     "from IPython.core.display import HTML\n",
     "\n",
     "#Imports\n",
-    "from numpy import *\n",
-    "from matplotlib.pyplot import *\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
    ]
   },
@@ -86,7 +86,7 @@
    "outputs": [],
    "source": [
     "def bx(x):\n",
-    "    return( x**5/(exp(x)-1) )"
+    "    return( x**5/(np.exp(x)-1) )"
    ]
   },
   {
@@ -96,7 +96,7 @@
    "outputs": [],
    "source": [
     "def dbdx(x):\n",
-    "    return( x**4 * ((5-x)*exp(x)-5) / (exp(x)-1)**2 )"
+    "    return( x**4 * ((5-x)*np.exp(x)-5) / (np.exp(x)-1)**2 )"
    ]
   },
   {
@@ -105,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = arange(0.01,20,0.01)"
+    "x = np.arange(0.01,20,0.01)"
    ]
   },
   {
@@ -116,7 +116,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f3ca59f5390>"
+       "<matplotlib.legend.Legend at 0x7ff74ec12780>"
       ]
      },
      "execution_count": 5,
@@ -137,10 +137,10 @@
     }
    ],
    "source": [
-    "plot(x, bx(x), lw=3)\n",
-    "plot(x, dbdx(x), lw=3)\n",
-    "plot(x, 0*x, 'k--')\n",
-    "legend(['B', 'dB/dx', '0'])"
+    "plt.plot(x, bx(x), lw=3)\n",
+    "plt.plot(x, dbdx(x), lw=3)\n",
+    "plt.plot(x, 0*x, 'k--')\n",
+    "plt.legend(['B', 'dB/dx', '0'])"
    ]
   },
   {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "4.965114231744276"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,17 +222,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def d2bdx2(x):\n",
-    "    return( 20*x**3/(exp(x)-1) - 10*x**4*exp(x)/(exp(x)-1)**2 + 2*exp(2*x)*x**5/(exp(x)-1)**3 - exp(x)*x**5/(exp(x)-1)**2 )"
+    "    return( 20*x**3/(np.exp(x)-1) - 10*x**4*np.exp(x)/(np.exp(x)-1)**2 + 2*np.exp(2*x)*x**5/(np.exp(x)-1)**3 - np.exp(x)*x**5/(np.exp(x)-1)**2 )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "4.965114231744276"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-9dd68a47e022>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mopt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnewton\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdbdx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-9-9dd68a47e022>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mopt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnewton\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdbdx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m~/pyEnvs/py3/lib/python3.6/site-packages/scipy/optimize/zeros.py\u001b[0m in \u001b[0;36mnewton\u001b[0;34m(func, x0, fprime, args, tol, maxiter, fprime2, x1, rtol, full_output, disp)\u001b[0m\n\u001b[1;32m    361\u001b[0m         msg = (\"Failed to converge after %d iterations, value is %s.\"\n\u001b[1;32m    362\u001b[0m                % (itr + 1, p))\n\u001b[0;32m--> 363\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    364\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    365\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0m_results_select\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfull_output\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfuncalls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mitr\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_ECONVERR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mRuntimeError\u001b[0m: Failed to converge after 50 iterations, value is 6.922336136369824e-08."
      ]
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "4.965114231743836"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,16 +375,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fvec(xvec):\n",
-    "    r = sqrt( xvec[0]**2 + xvec[1]**2 )\n",
-    "    phi = arccos( xvec[0]/r )\n",
+    "    r = np.sqrt( xvec[0]**2 + xvec[1]**2 )\n",
+    "    phi = np.arccos( xvec[0]/r )\n",
     "    fx = r**2 - 1.0\n",
-    "    fy = cos(phi)\n",
-    "    return( array([fx, fy]) )"
+    "    fy = np.cos(phi)\n",
+    "    return( np.array([fx, fy]) )"
    ]
   },
   {
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "       x: array([-3.60625931e-11,  1.00000000e+00])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
        "(0, 25)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -486,12 +486,12 @@
     }
    ],
    "source": [
-    "x1 = arange(3.56, 6.22, 0.001)\n",
+    "x1 = np.arange(3.56, 6.22, 0.001)\n",
     "\n",
-    "clf()\n",
-    "fill_between(x, bx(x), alpha=0.5)\n",
-    "fill_between(x1, bx(x1), alpha=0.5, facecolor='r')\n",
-    "ylim([0,25])"
+    "plt.clf()\n",
+    "plt.fill_between(x, bx(x), alpha=0.5)\n",
+    "plt.fill_between(x1, bx(x1), alpha=0.5, facecolor='r')\n",
+    "plt.ylim([0,25])"
    ]
   },
   {
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
        "(53.14174673016606, 5.899919078862899e-13)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -565,13 +565,13 @@
        "(122.08116743813392, 2.0046050699847875e-07)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "integ.quad(bx, 0, Inf)"
+    "integ.quad(bx, 0, np.Inf)"
    ]
   },
   {
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -600,13 +600,13 @@
        "4.263256414560601e-14"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "integ.quad(bx, 0, Inf)[0]-8*pi**6/63"
+    "integ.quad(bx, 0, np.Inf)[0]-8*np.pi**6/63"
    ]
   },
   {
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -635,13 +635,13 @@
        "0.43529848088237094"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "integ.quad(bx, 3.56, 6.22)[0] / integ.quad(bx, 0, Inf)[0]"
+    "integ.quad(bx, 3.56, 6.22)[0] / integ.quad(bx, 0, np.Inf)[0]"
    ]
   },
   {
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
        "<TableColumns names=('time (days since 2003-01-24)','wavelength (nm)','irradiance (W/m^2/nm)')>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,16 +696,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f3c9b3a0320>]"
+       "[<matplotlib.lines.Line2D at 0x7ff7445b77b8>]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -725,7 +725,7 @@
    "source": [
     "l = data['wavelength (nm)']\n",
     "flux = data['irradiance (W/m^2/nm)']\n",
-    "plot(l, flux)"
+    "plt.plot(l, flux)"
    ]
   },
   {
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +748,7 @@
        "1319.4359600971845"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,12 +768,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "l1 = l[logical_and(l>400, l<700)]\n",
-    "flux1 = flux[logical_and(l>400, l<700)]"
+    "l1 = l[np.logical_and(l>400, l<700)]\n",
+    "flux1 = flux[np.logical_and(l>400, l<700)]"
    ]
   },
   {
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -794,18 +794,18 @@
        "698.85"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "amax(l1)"
+    "np.amax(l1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -814,13 +814,13 @@
        "400.34"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "amin(l1)"
+    "np.amin(l1)"
    ]
   },
   {
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
        "0.40204419522708396"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,11 +968,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = arange(0, 20, 0.1)\n"
+    "t = np.arange(0, 20, 0.1)\n"
    ]
   },
   {
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1028,7 @@
        "(200, 2)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1046,16 +1046,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f3c9b192898>"
+       "<matplotlib.legend.Legend at 0x7ff7444c3b70>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1073,10 +1073,10 @@
     }
    ],
    "source": [
-    "clf()\n",
-    "plot(t, output[:,0])\n",
-    "plot(t, output[:,1])\n",
-    "legend(['x', 'v'])"
+    "plt.clf()\n",
+    "plt.plot(t, output[:,0])\n",
+    "plt.plot(t, output[:,1])\n",
+    "plt.legend(['x', 'v'])"
    ]
   },
   {
